[workspace]
members = [
    "./lib/lng-ast",
    "./lib/lng-parse"
, "lib/lng-vm"]

[workspace.metadata]
name = "lng"
repository = "https://github.com/your-username/lng"
description = "A language parsing and processing tool"
license = "MIT OR Apache-2.0"
keywords = ["language", "parsing", "compiler"]
categories = ["compilers", "parsing"]


[workspace.dependencies]
anyhow = "1.0.88"
async-trait = "0.1.82"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel", "crossbeam-deque", "crossbeam-epoch", "crossbeam-queue", "nightly"] }
crossbeam-utils = { version = "0.8.20", features = ["nightly"] }
either = { version = "1.3.0", features = ["serde"] }
from-pest = "0.3.2"
indexmap = { version = "2.5.0", features = ["serde", "rayon"] }
itertools = "0.13.0"
lru = "0.12.4"
# memchr = { version = "2.7.4", features = ["core", "compiler_builtins", "use_std"] }
once_cell = { version = "1.19.0", features = ["parking_lot"] }
parking_lot = { version = "0.12.3", features = ["serde", "nightly"] }
pest = { version = "2.7.12", features = ["pretty-print"] }
pest-ast = "0.3.4"
pest_debugger = "2.7.12"
pest_derive = { version = "2.7.12", features = ["grammar-extras"] }
pest_meta = { version = "2.7.12", features = ["grammar-extras"] }
pest_vm = { version = "2.7.12", features = ["grammar-extras"] }
petgraph = { version = "0.6.5", features = ["serde", "generate", "serde_derive", "rayon", "serde-1"] }
pyo3 = "0.22.2"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["alloc", "derive", "rc"] }
smallvec = { version = "1.13.2", features = ["arbitrary", "serde", "union", "write"] }
sourcemap = "9.0.0"
strum = { version = "0.26.3", features = ["derive", "phf", "strum_macros"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io", "slab", "time", "tracing", "futures-io", "futures-util", "net", "rt", "io-util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "once_cell", "parking_lot", "serde", "tracing", "tracing-serde", "valuable-serde"] }
typed-arena = "2.0.2"
uuid = { version = "1.10.0", features = ["arbitrary", "atomic", "serde", "v4"] }

lng-parse = { path = "./lib/lng-parse"}
lng-ast = { path = "./lib/lng-ast"}
lng-vm = { path = "./lib/lng-vm"}

[package]
name = "lng"
version = "0.1.0"
edition = "2021"
default-run = "lng"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
crossbeam = { workspace = true }
crossbeam-utils = { workspace = true }
either = { workspace = true }
from-pest = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
lru = { workspace = true }
# memchr = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
pest = { workspace = true }
pest-ast = { workspace = true }
pest_debugger = { workspace = true }
pest_derive = { workspace = true }
pest_meta = { workspace = true }
pest_vm = { workspace = true }
petgraph = { workspace = true }
pyo3 = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
sourcemap = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
typed-arena = { workspace = true }
uuid = { workspace = true }
lng-parse = { workspace = true }
lng-ast = { workspace = true }
lng-vm = { workspace = true }
lazy_static = "1.5.0"

[dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[[bin]]
name = "lng"
path = "src/bin/main.rs"
